without responsive done

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             </div>
         </div>
 
-        <div class="container main_header">
-            <p class="player_title">Top Plyers</p>
+        <div class="container ">
+            <div class="main_header">
+                <p class="player_title">Top Plyers</p>
             <div class="players">
                 <div class="player">
                     <img src="./images/players/player-1.png" alt="" class="player_img">
@@ -95,72 +96,75 @@
                     </div>
                 </div>
             </div>
+            </div>
         </div>
     </header>
     <section>
-        <div class="container course_container">
-            <p class="courses_title">Latest Course</p>
-            <div class="courses">
-                <div class="course">
-                    <img src="./images/courses/course-1.png" alt="" class="course_img">
-                    <div class="course_all_info">
-                        <p class="course_title">React Guide Complete</p>
-                        <p class="course_author">Cristiano Ronaldo</p>
-                        <div class="course_other_info">
-                            <div class="stars">
-                                <i class="fa-solid fa-star filled"></i>
-                                <i class="fa-solid fa-star filled"></i>
-                                <i class="fa-solid fa-star filled"></i>
-                                <i class="fa-solid fa-star filled"></i>
-                                <i class="fa-solid fa-star filled"></i>
-                            </div>
-                            <div class="rating">5.0</div>
-                            <div class="duration">
-                                <i class="fa-regular fa-clock clock"></i>
-                                <p class="time">2:48 hr</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="course">
-                    <img src="./images/courses/course-2.png" alt="" class="course_img">
-                    <div class="course_all_info">
-                        <p class="course_title">Photoshop Mastery Beginner <br>to Advance</p>
-                        <p class="course_author">Lionel Messi</p>
-
-                        <div class="course_other_info">
-                            <div class="stars">
-                                <i class="fa-solid fa-star filled"></i>
-                                <i class="fa-solid fa-star filled"></i>
-                                <i class="fa-solid fa-star filled"></i>
-                                <i class="fa-solid fa-star filled"></i>
-                                <i class="fa-solid fa-star filled"></i>
-                            </div>
-                            <div class="rating">5.0</div>
-                            <div class="duration">
-                                <i class="fa-regular fa-clock clock"></i>
-                                <p class="time">3:00 hr</p>
+        <div class="container">
+            <div class="course_container">
+                <p class="courses_title">Latest Course</p>
+                <div class="courses">
+                    <div class="course">
+                        <img src="./images/courses/course-1.png" alt="" class="course_img">
+                        <div class="course_all_info">
+                            <p class="course_title">React Guide Complete</p>
+                            <p class="course_author">Cristiano Ronaldo</p>
+                            <div class="course_other_info">
+                                <div class="stars">
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                </div>
+                                <div class="rating">5.0</div>
+                                <div class="duration">
+                                    <i class="fa-regular fa-clock clock"></i>
+                                    <p class="time">2:48 hr</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="course">
-                    <img src="./images/courses/course-3.png" alt="" class="course_img">
-                    <div class="course_all_info">
-                        <p class="course_title">Advance Backend with NodeJS</p>
-                        <p class="course_author">Neymar Jr.</p>
-                        <div class="course_other_info">
-                            <div class="stars">
-                                <i class="fa-solid fa-star filled"></i>
-                                <i class="fa-solid fa-star filled"></i>
-                                <i class="fa-solid fa-star filled"></i>
-                                <i class="fa-solid fa-star filled"></i>
-                                <i class="fa-solid fa-star empty"></i>
+                    <div class="course">
+                        <img src="./images/courses/course-2.png" alt="" class="course_img">
+                        <div class="course_all_info">
+                            <p class="course_title">Photoshop Mastery Beginner <br>to Advance</p>
+                            <p class="course_author">Lionel Messi</p>
+    
+                            <div class="course_other_info">
+                                <div class="stars">
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                </div>
+                                <div class="rating">5.0</div>
+                                <div class="duration">
+                                    <i class="fa-regular fa-clock clock"></i>
+                                    <p class="time">3:00 hr</p>
+                                </div>
                             </div>
-                            <div class="rating">4.0</div>
-                            <div class="duration">
-                                <i class="fa-regular fa-clock clock"></i>
-                                <p class="time">1:30 hr</p>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <img src="./images/courses/course-3.png" alt="" class="course_img">
+                        <div class="course_all_info">
+                            <p class="course_title">Advance Backend with NodeJS</p>
+                            <p class="course_author">Neymar Jr.</p>
+                            <div class="course_other_info">
+                                <div class="stars">
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star empty"></i>
+                                </div>
+                                <div class="rating">4.0</div>
+                                <div class="duration">
+                                    <i class="fa-regular fa-clock clock"></i>
+                                    <p class="time">1:30 hr</p>
+                                </div>
                             </div>
                         </div>
                     </div>
