--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
 <body>
     <header>
         <div class="nav_bar">
-            <div class="container nav_container">
-                <div class="logo">
-                    <a href="#" class="links">
-                        <img src="./images/icons/logo.png" alt="logo" class="logo_img">
-                    </a>
-                    <span class="logo_title">Idea</span>
+            <div class="container">
+                <div class="nav_container">
+                    <div class="logo">
+                        <a href="#" class="links">
+                            <img src="./images/icons/logo.png" alt="logo" class="logo_img">
+                        </a>
+                        <span class="logo_title">Idea</span>
+                    </div>
+                    <nav class="navs">
+                        <a href="#" class="links">Home</a>
+                        <a href="#" class="links">About</a>
+                        <a href="#" class="links">Work</a>
+                        <a href="#" class="links">
+                            <img src="./images/icons/profile.png" alt="profile" class="profile_pic">
+                        </a>
+                    </nav>
                 </div>
-                <nav class="navs">
-                    <a href="#" class="links">Home</a>
-                    <a href="#" class="links">About</a>
-                    <a href="#" class="links">Work</a>
-                    <a href="#" class="links">
-                        <img src="./images/icons/profile.png" alt="profile">
-                    </a>
-                </nav>
             </div>
         </div>
 
